# L20_1280

./: .mxproject  CMakeLists.txt  Makefile  STM32L433CCTx_FLASH.ld  sx1280Basic.ioc
Drivers/: CMakeLists.txt
Inc/: FreeRTOSConfig.h  QMA6981.h  main.h  qst_sw_i2c.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
MDK-ARM/: JLinkLog.txt  startup_stm32l433xx.lst  sx1280Basic.uvguix.Administrator  sx1280Basic.uvoptx  sx1280Basic.uvprojx
MDK-ARM/sx1280Basic/: bsp_uart.crf  bsp_uart.d  cmsis_os.crf  cmsis_os.d  croutine.crf  croutine.d  dma.crf  dma.d  event_groups.crf  event_groups.d  freertos.crf  freertos.d  gpio.crf  gpio.d  heap_4.crf  heap_4.d  i2c.crf  i2c.d  list.crf  list.d  main.crf  main.d  port.crf  port.d  qma6981.crf  qma6981.d  qst_sw_i2c.crf  qst_sw_i2c.d  queue.crf  queue.d  startup_stm32l433xx.d  stm32l4xx_hal.crf  stm32l4xx_hal.d  stm32l4xx_hal_cortex.crf  stm32l4xx_hal_cortex.d  stm32l4xx_hal_dma.crf  stm32l4xx_hal_dma.d  stm32l4xx_hal_dma_ex.crf  stm32l4xx_hal_dma_ex.d  stm32l4xx_hal_exti.crf  (+52 more)
Middlewares/: CMakeLists.txt
Src/: CMakeLists.txt  QMA6981.c  at_cmd.c  at_cmd.h  bsp_uart.c  bsp_uart.h  freertos.c  gpio.c  i2c.c  main.c  qst_sw_i2c.c  spi.c  stm32l4xx_it.c  usart.c  utilities.h
Src/BMA2x2/: bma2x2.c  bma2x2.h  bma2x2_hal.c  bma2x2_hal.h  bma2x2_io.h  bma2x2_support.c  delay.c  delay.h
Src/sx1280/: sx1280-hal.c  sx1280.c
cmake/: binutils-arm-none-eabi.cmake  debug-helper.cmake  launch.json-jlink.in  stm32l4.cmake  toolchain-arm-none-eabi.cmake  toolchain-config.cmake
vsc_build/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
vsc_build/.cmake/api/v1/reply/: cache-v2-d1f35f0466e1dbe998bf.json  codemodel-v2-60002dc189f4a4ea062f.json  codemodel-v2-ffb8b2a25f2b355e351d.json  index-2020-02-12T05-14-00-0183.json  index-2020-02-14T03-26-55-0820.json  target-L20-Debug-13c9c9f3d86db8516d77.json  target-L20-Debug-7832f5cf9e4d53071fde.json  target-L20.bin-Debug-3e60c079ed92656c307f.json  target-L20.bin-Debug-4732e05e306eadd43896.json  target-L20.hex-Debug-049a3508089330e46765.json  target-L20.hex-Debug-1a175cdb728c5c2c67aa.json  target-driver-Debug-d5879e9c42864e24e508.json  target-rtos-Debug-ec219d5c4baf234e8905.json
vsc_build/Drivers/: Makefile  cmake_install.cmake
vsc_build/Middlewares/: Makefile  cmake_install.cmake
vsc_build/Src/: L20  L20.hex  Makefile  RinLink-L20.map  cmake_install.cmake
